vowel substring solution task

--- a/challenges/image_prprocessing/model_evaluation.ipynb
+++ b/challenges/image_prprocessing/model_evaluation.ipynb
@@ -308,7 +308,7 @@
     "# Assuming 'model' is  trained Logistic Regression model\n",
     "feature_importance = np.abs(model.coef_[0])\n",
     "\n",
-    "# Display the top 10 most important features\n",
+    "# Display the top 10 most important features 7\n",
     "top_features = np.argsort(feature_importance)[::-1][:10]\n",
     "print(f\"Top 10 Important Features (Logistic Regression): {top_features}\")\n"
    ]
